Migrated Signup system
> Linked DB to the app through AppDAO class.

> Refactored Signup code

> Linked Signup functionality to DB

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
+# API keys
+APIKeys.java
